--- a/details.html
+++ b/details.html
@@ -18,7 +18,7 @@
 
     <section class="team-name">
         <span class="image">
-            <img src="./assets/images/liverpool.png" alt="Liverpool" width="99px" height="99px">
+            <img src="./assets/images/liverpool-logo-vector.png" alt="Liverpool" >
         </span>
         <span class="name-club">
             Liverpool
@@ -48,7 +48,51 @@
                 <div class="image-player">
                     <img src="./assets/images/van.png" alt="image player">
                 </div>
-                <span class="name">Virgil van Dijk</span>
+                <span class="name">Mohammed  Salah</span>
+            </div>
+        </div>
+        <div class="player-container">
+            <div class="player-num">
+                <img src="./assets/images/4.jpg" alt="number">
+            </div>
+            <div class="card-body">
+                <div class="image-player">
+                    <img src="./assets/images/van.png" alt="image player">
+                </div>
+                <span class="name">Roberto Firmino</span>
+            </div>
+        </div>
+        <div class="player-container">
+            <div class="player-num">
+                <img src="./assets/images/4.jpg" alt="number">
+            </div>
+            <div class="card-body">
+                <div class="image-player">
+                    <img src="./assets/images/van.png" alt="image player">
+                </div>
+                <span class="name">Alex Oxlade Chamberlain</span>
+            </div>
+        </div>
+        <div class="player-container">
+            <div class="player-num">
+                <img src="./assets/images/4.jpg" alt="number">
+            </div>
+            <div class="card-body">
+                <div class="image-player">
+                    <img src="./assets/images/van.png" alt="image player">
+                </div>
+                <span class="name">Roberto Firmino</span>
+            </div>
+        </div>
+        <div class="player-container">
+            <div class="player-num">
+                <img src="./assets/images/4.jpg" alt="number">
+            </div>
+            <div class="card-body">
+                <div class="image-player">
+                    <img src="./assets/images/van.png" alt="image player">
+                </div>
+                <span class="name">Alex Oxlade Chamberlain</span>
             </div>
         </div>
         <div class="player-container">
@@ -70,7 +114,18 @@
                 <div class="image-player">
                     <img src="./assets/images/van.png" alt="image player">
                 </div>
-                <span class="name">Virgil van Dijk</span>
+                <span class="name">Mohammed  Salah</span>
+            </div>
+        </div>
+        <div class="player-container">
+            <div class="player-num">
+                <img src="./assets/images/4.jpg" alt="number">
+            </div>
+            <div class="card-body">
+                <div class="image-player">
+                    <img src="./assets/images/van.png" alt="image player">
+                </div>
+                <span class="name">Mohammed  Salah</span>
             </div>
         </div>
         <div class="player-container">
@@ -92,62 +147,7 @@
                 <div class="image-player">
                     <img src="./assets/images/van.png" alt="image player">
                 </div>
-                <span class="name">Virgil van Dijk</span>
-            </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
-                </div>
-                <span class="name">Virgil van Dijk</span>
-            </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
-                </div>
-                <span class="name">Virgil van Dijk</span>
-            </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
-                </div>
-                <span class="name">Virgil van Dijk</span>
-            </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
-                </div>
-                <span class="name">Virgil van Dijk</span>
-            </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
-                </div>
-                <span class="name">Virgil van Dijk</span>
+                <span class="name">Roberto Firmino</span>
             </div>
         </div>
     </main>
