final-project Done

--- a/details.html
+++ b/details.html
@@ -29,125 +29,127 @@
 
 
     <main>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+        <div class="container">
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/4.jpg" alt="number">
                 </div>
-                <span class="name">Virgil van Dijk</span>
-            </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/van.png" alt="image player">
+                    </div>
+                    <span class="name">Virgil van Dijk</span>
                 </div>
-                <span class="name">Mohammed  Salah</span>
             </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/11.png" alt="number">
                 </div>
-                <span class="name">Roberto Firmino</span>
-            </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/image 6.png" alt="image player">
+                    </div>
+                    <span class="name">Mohammed  Salah</span>
                 </div>
-                <span class="name">Alex Oxlade Chamberlain</span>
             </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/9.png" alt="number">
                 </div>
-                <span class="name">Roberto Firmino</span>
-            </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/image 6 (1).png" alt="image player">
+                    </div>
+                    <span class="name">Roberto Firmino</span>
                 </div>
-                <span class="name">Alex Oxlade Chamberlain</span>
             </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/21.png" alt="number">
                 </div>
-                <span class="name">Virgil van Dijk</span>
-            </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/image 6 (2).png" alt="image player">
+                    </div>
+                    <span class="name">Alex Chamberlain</span>
                 </div>
-                <span class="name">Mohammed  Salah</span>
             </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/9.png" alt="number">
                 </div>
-                <span class="name">Mohammed  Salah</span>
-            </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/image 6 (1).png" alt="image player">
+                    </div>
+                    <span class="name">Roberto Firmino</span>
                 </div>
-                <span class="name">Virgil van Dijk</span>
             </div>
-        </div>
-        <div class="player-container">
-            <div class="player-num">
-                <img src="./assets/images/4.jpg" alt="number">
-            </div>
-            <div class="card-body">
-                <div class="image-player">
-                    <img src="./assets/images/van.png" alt="image player">
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/21.png" alt="number">
                 </div>
-                <span class="name">Roberto Firmino</span>
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/image 6 (2).png" alt="image player">
+                    </div>
+                    <span class="name">Alex Chamberlain</span>
+                </div>
+            </div>
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/4.jpg" alt="number">
+                </div>
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/van.png" alt="image player">
+                    </div>
+                    <span class="name">Virgil van Dijk</span>
+                </div>
+            </div>
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/11.png" alt="number">
+                </div>
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/image 6.png" alt="image player">
+                    </div>
+                    <span class="name">Mohammed  Salah</span>
+                </div>
+            </div>
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/11.png" alt="number">
+                </div>
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/image 6.png" alt="image player">
+                    </div>
+                    <span class="name">Mohammed  Salah</span>
+                </div>
+            </div>
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/4.jpg" alt="number">
+                </div>
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/van.png" alt="image player">
+                    </div>
+                    <span class="name">Virgil van Dijk</span>
+                </div>
+            </div>
+            <div class="player-container">
+                <div class="player-num">
+                    <img src="./assets/images/9.png" alt="number">
+                </div>
+                <div class="card-body">
+                    <div class="image-player">
+                        <img src="./assets/images/image 6 (1).png" alt="image player">
+                    </div>
+                    <span class="name">Roberto Firmino</span>
+                </div>
             </div>
         </div>
     </main>
